# FlowLume

./: .env.example  .gitignore  CLAUDE.md  README.md  README_EN.md  chat-职位需求分析总结.txt  pyproject.toml  业务需求文档.md
data/sop_knowledge_base/: MES 报工操作指南.md  SAP 工单查询指南.md  常见问题FAQ.md  设备点检操作指南.md  质量检验操作指南.md
docs/superpowers/plans/: 2026-05-24-strategic-planning-agent-plan.md
docs/superpowers/specs/: 2026-05-24-data-insight-agent-design.md  (+4 more)
src/agents/: __init__.py  emotion_detector.py  strategic_planning_agent.py
src/llm/: __init__.py  claude_client.py
src/prompts/: __init__.py  change_enablement.py  data_insight.py  lean_optimization.py  strategic_planning.py
src/rag/: __init__.py  document_loader.py  retriever.py  text_splitter.py
src/tracking/: __init__.py  user_behavior_tracker.py
src/workflows/: __init__.py  change_enablement_workflow.py  data_insight_workflow.py  lean_optimization_workflow.py  strategic_workflow.py
tests/: conftest.py  test_data_insight_mock_db.py  test_lean_optimization_mock_data.py  test_vsm_calculator.py  test_waste_identifier.py
tests/agents/: test_anomaly_detector.py  test_change_enablement_agent.py  test_data_insight_agent.py  test_data_insight_prompts.py  test_lean_optimization_agent.py  test_lean_optimization_prompts.py  test_strategic_planning_agent.py  test_text_to_sql.py
tests/llm/: test_claude_client.py
tests/rag/: test_document_loader.py  test_retriever.py
tests/tracking/: test_user_behavior_tracker.py
tests/workflows/: test_data_insight_workflow.py  test_lean_optimization_workflow.py  test_strategic_workflow.py
(+13 files in other folders)
