[project]
name = "lean-digital-agents"
version = "0.1.0"
description = "精益数字化多智能体系统"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "milvus-haystack>=0.0.10",
    "haystack-ai>=2.0.0",
    "sentence-transformers>=2.7.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm", "src/rag", "src/agents/change_enablement", "src/tracking"]